[tool.poetry]
name = "ksg-nett"
version = "0.1.0"
description = ""
authors = ["Tormod Haugland <tormod.haugland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.9"
djangorestframework = "^3.12.0"
django = "^3.1.2"
pillow = "^8.0.0"
channels = "^2.4.0"
redis = "^3.5.3"
channels-redis = "^3.1.0"
factory-boy = "^3.1.0"
djangorestframework-simplejwt = "^4.4.0"
django-model-utils = "^4.0.0"
django-s3-storage = "^0.13.4"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
boto3 = "^1.15.16"
packaging = "^20.4"
drf-yasg2 = "^1.18.5"
weasyprint = "^51"
coveralls = "^2.1.2"
graphene-django = "^2.13.0"
graphene-django-cud = "^0.6.5"
django-filter = "^2.4.0"
whitenoise = "^5.2.0"

[tool.poetry.dev-dependencies]
coveralls = "^2.1.2"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
