[tool.poetry]
name = "ksg-nett"
version = "2023.9.1"
description = ""
authors = ["Tormod Haugland <tormod.haugland@gmail.com>", "Alexander Orvik <alexao1111@gmail.com>", "Christian De Fréne <defrenechr@me.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
djangorestframework = "^3.14.0"
django = "^4.2.7"
pillow = "^10.0.1"
channels = "^4.0.0"
redis = "^4.2.0"
channels-redis = "^4.0.0"
django-cors-headers = "^3.2"
factory-boy = "^3.1.0"
djangorestframework-simplejwt = "^5.0.0"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"
packaging = "^23.1"
weasyprint = "^54"
graphene-django = "^3.0.0"
graphene-django-cud = "^0.11.1"
django-filter = "^2.4.0"
sentry-sdk = "1.14.0"
django-storages = "^1.11.1"
pyjwt = "^2.3.0"
pydash = "^6.0.0"
openpyxl = "^3.0.10"
icalendar = "^5.0.1"
bleach = "^5.0.1"
stripe = "^5.1.1"
scipy = "1.10.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
cryptography = "^41.0.4"
drf-yasg = "^1.21.7"
pyopenssl = "^23.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3"
pytest-django = "^3.7"
pytest-cov = "^2.8"
pre-commit = "^2.10.0"
addict = "^2.4.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | _build
  | build
)/
'''

[build-system]
requires = ["poetry>=1.2.2"]
build-backend = "poetry.masonry.api"
